overflow issue solved

--- a/css/chatBot.css
+++ b/css/chatBot.css
@@ -46,6 +46,7 @@
     min-height: 382px;
     max-height: 382px;
     background: #fbfbfb;
+    overflow-y: scroll;
 }
 .chat-screen .chat-body .chat-start {
     border: 1px solid #f8d4ff;
@@ -157,6 +158,31 @@
     line-height: 50px;
     cursor: pointer;
     transition: all 0.5s ease;
+}
+.tooltip{
+    position: fixed;
+    bottom: 10%;
+    right: 5%;
+    /* top:50%;
+    left:100%; */
+    width:200px;
+    /* max-width:400px; */
+    transform:translate(0, -50%);
+    padding:20px;
+    color:#666666;
+    background-color: black;
+    font-weight:normal;
+    font-size:13px;
+    border-radius:8px;
+    /* position:absolute; */
+    z-index:9999;
+    box-sizing:border-box;
+    display:block;
+    border:1px solid #DCA;
+    visibility: visible;
+}
+.tooltip h1{
+    font-size: xx-large;
 }
 .chat-bot-icon img {
     height: 90px;
